Mention banned coop exploits
Open video showcases in new tab

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -41,10 +41,13 @@
         <br>
         <br>
         <ul>
-            <li><a href="https://youtu.be/CLzVfyYZhQA">Pause Clipping</a> - cannot be timed</li>
-            <li><a href="https://youtu.be/tWjyVopD5Eo">Fullscreen Pause Abuse</a> - cannot be timed and OS specific</li>
-            <li><a href="https://youtu.be/QdRcAm0rvGQ?t=41">OoB Velocity Reset</a> - cannot be timed</li>
-            <li><a href="https://youtu.be/V0u5r3g-DVs">Pause Manipulation</a> - cannot be timed</li>
+            <li><a href="https://youtu.be/CLzVfyYZhQA" target="_blank">Pause Clipping</a> - cannot be timed</li>
+            <li><a href="https://youtu.be/tWjyVopD5Eo" target="_blank">Fullscreen Pause Abuse</a> - cannot be timed and OS specific</li>
+            <li><a href="https://youtu.be/QdRcAm0rvGQ?t=41" target="_blank">OoB Velocity Reset</a> - cannot be timed</li>
+            <li><a href="https://youtu.be/V0u5r3g-DVs" target="_blank">Pause Manipulation</a> - cannot be timed</li>
+            <li>Fast Spawn - unfair advantage</li>
+            <li>Timer Freeze - cannot be timed</li>
+            <li><a href="https://youtu.be/1C6XVOuf_Q8" target="_blank">Lag Super Reportal</a> - indirect modification</li>
         </ul>
     </div>
 
