Improve banned exploits section

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -41,13 +41,27 @@
         <br>
         <br>
         <ul>
-            <li><a href="https://youtu.be/CLzVfyYZhQA" target="_blank">Pause Clipping</a> - cannot be timed</li>
-            <li><a href="https://youtu.be/tWjyVopD5Eo" target="_blank">Fullscreen Pause Abuse</a> - cannot be timed and OS specific</li>
-            <li><a href="https://youtu.be/QdRcAm0rvGQ?t=41" target="_blank">OoB Velocity Reset</a> - cannot be timed</li>
-            <li><a href="https://youtu.be/V0u5r3g-DVs" target="_blank">Pause Manipulation</a> - cannot be timed</li>
-            <li>Fast Spawn - unfair advantage</li>
-            <li>Timer Freeze - cannot be timed</li>
-            <li><a href="https://youtu.be/1C6XVOuf_Q8" target="_blank">Lag Super Reportal</a> - indirect modification</li>
+            <li>
+                <a title="Timer does not count paused time." href="https://youtu.be/CLzVfyYZhQA" target="_blank">Pause Clipping</a>
+            </li>
+            <li>
+                <a title="Timer freezes while simulation is still happening in the background. Also happens to work for specific operating systems only." href="https://youtu.be/tWjyVopD5Eo">Fullscreen Pause Abuse</a>
+            </li>
+            <li>
+                <a title="Timer does not count paused time." href="https://youtu.be/QdRcAm0rvGQ?t=41">OoB Velocity Reset</a>
+            </li>
+            <li>
+                <a title="Timer does not count paused time." href="https://youtu.be/V0u5r3g-DVs">Pause Manipulation</a>
+            </li>
+            <li>
+                <a style="cursor: help" title="Very high ping is required to make the partner spawn faster.">Fast Spawn</a>
+            </li>
+            <li>
+                <a style="cursor: help" title="Timer does not start while partner is able to move around freely.">Timer Freeze</a>
+            </li>
+            <li>
+                <a title="Server connection gets modified indirectly." href="https://youtu.be/1C6XVOuf_Q8">Lag Super Reportal</a>
+            </li>
         </ul>
     </div>
 
