Add Pause Boosting to list of banned exploits
Add specific note for +remote_view

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -26,6 +26,9 @@
         Abusing the use of bind or alias commands to achieve more than one action with the same key is not allowed.
         <br>
         An action is any command that sends a key down or key up event denoted with a plus or minus sign.
+        <br>
+        <br>
+        Note: Binding +remote_view with another action is the only exception.
     </div>
 
     <h2 class="subtitle">Scripting</h2>
@@ -61,6 +64,9 @@
             </li>
             <li>
                 <a title="Server connection gets modified indirectly." href="https://youtu.be/1C6XVOuf_Q8">Lag Super Reportal</a>
+            </li>
+            <li>
+                <a title="Timer does not count paused time." href="https://youtu.be/GYSXHXJqJu4" target="_blank">Pause Boosting</a>
             </li>
         </ul>
     </div>
